uncopled typing and inspired css and fixed typing so it looked right

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,16 +1,7 @@
-
-
-
 .App {
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
-  font-size: 35px;
-   margin: 0;
-  position: absolute;
-  top: 45%;
-  left: 20%;
-  transform: translateY(-50%);
-    text-align: center
-};
- .color{
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+
+}
+.color {
   color: red;
- }
+}
