--- a/src/css/inspire.css
+++ b/src/css/inspire.css
@@ -7,6 +7,7 @@
  display: flex;
  justify-content: center;
  margin: 0;
+ letter-spacing: -18px;
  }
  .wrapper{
    display: flex;
@@ -19,5 +20,12 @@
   position: relative;
   top: 45px;
  
- 
+  -webkit-animation: rotateY 1s infinite linear;
+  animation: rotateY 20s infinite linear;
  }
+@-webkit-keyframes rotateY {
+  to { -webkit-transform: rotateY(360deg); }
+}
+@keyframes rotateY {
+  to { transform: rotateY(360deg); }
+}
