finished for the night...not sure what i did but saving progress, everything seems to be working

--- a/src/css/inspire.css
+++ b/src/css/inspire.css
@@ -10,8 +10,18 @@
  letter-spacing: -18px;
  }
  .wrapper{
+
    display: flex;
-   position: relative;
+     margin: 0;
+position: relative;
+  top: 325px;
+margin-left: auto;
+    margin-right: auto;
+ display: flex;
+ justify-content: center;
+ justify-self: center;
+  transform: translateY(-50%);
+  text-align: center;
    
  }
 
