--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,26 +1,49 @@
-.App {
+.header{
    font-family: 'MontrealRegular';
-
 }
-
+img{
+  background-repeat: no-repeat;
+}
 .marginRight{
   margin-right: 30px;
 }
 .marginRight2{
   margin-right: 20px;
 }
+
 .containerHeader{
+  position: relative;
   height: 65px;
-  
+  border-bottom: .5px solid rgb(187, 187, 187);
   display: flex;
   justify-content: space-between;
+  font-size: 14px;
 }
-
+.airbnbLogo{
+  position: relative;
+  top: 5px;
+  left: 75px;
+}
 .headerMiddle{
   display: flex;
   position: relative;
-left: 75px;
+  margin-top: 0;
+left: 85px;
+top: 13px;
+  border-radius: 25px;
+  border: .3px grey solid;
+  height:40px;
+width: 345px;
+box-shadow: 1px 1px 1px .1px grey;
+}
+.headerMiddle:hover{
+  box-shadow: 1px 2px 2px .2px grey;
+}
+.hMiddle{
+  display: flex;
+  position: relative;
   
+  left: 10px;
 }
 .headerEnd{
 
@@ -29,8 +52,8 @@ left: 75px;
  
 }
 .svgIcon{
- background-color:  rgb(255,65,78); 
- border-radius: 50%;
- position: relative;
- top: -8px;
+  position: relative;
+
+  left: -15px;
+  top: -7px;
 }
