fixed the blur on the dropshadow of the middle header to better reflect the wireframe

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -34,7 +34,7 @@ top: 13px;
   border: .3px grey solid;
   height:40px;
 width: 345px;
-box-shadow: 1px 1px 1px .1px grey;
+box-shadow: 1px 1px 1px .1px rgb(195, 195, 195);
 }
 .headerMiddle:hover{
   box-shadow: 1px 2px 2px .2px grey;
