--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -133,7 +133,7 @@ button:focus {
   display: block;
 }
 
-.modal {
+.modal1 {
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
