--- a/src/css/splashModal.css
+++ b/src/css/splashModal.css
@@ -1,93 +1,25 @@
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
 
 :root {
-  --modal-duration: 1s;
-  --primary-color: #30336b;
-  --secondary-color: #be2edd;
-}
+  --modal-duration1: 8s;
+  --primary-color: rgb(255,65,78);
+  --secondary-color: #be2edd;}
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   margin: 0;
   transition: transform 0.3s ease;
-}
-
-body.show-nav{
-  /* Width of the nav */
-  transform: translateX(200px);
-}
-
-nav {
-  background-color: var(--primary-color);
-  border-right: 2px solid rgba(200, 200, 200, 0.1);
-  color: #fff;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 200px;
-  height: 100vh;
-  z-index: 100;
-  transform: translateX(-100%);
-}
-
-nav .logo {
-  padding: 30px 0;
-  text-align: center;
-}
-
-nav .logo img {
-  height: 75px;
-  width: 75px;
-  border-radius: 50%;
-}
-
-nav ul {
-  padding: 0;
-  list-style-type: none;
-  margin: 0;
-}
-
-nav ul li {
-  border-bottom: 2px solid rgba(200, 200, 200, 0.1);
-  padding: 20px;
-}
-
-nav ul li:first-of-type {
-  border-top: 2px solid rgba(200, 200, 200, 0.1);
-}
-
-nav ul li a {
-  color: #fff;
-  text-decoration: none;
-}
-
-nav ul li a:hover {
-  text-decoration: underline;
-}
-
-header {
-  background-color: var(--primary-color);
-  color: #fff;
-  font-size: 130%;
-  position: relative;
-  padding: 40px 15px;
-  text-align: center;
-}
-
-header h1 {
-  margin: 0;
 }
 
 header p {
   margin: 30px 0;
 }
 
-button,
-input[type='submit'] {
+button {
   background-color: var(--secondary-color);
   border: 0;
   border-radius: 5px;
@@ -117,17 +49,9 @@ button:focus {
   margin: 0 auto;
   max-width: 100%;
   width: 800px;
+  z-index: 100;
 }
 
-.modal-container {
-  background-color: rgba(0, 0, 0, 0.6);
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
 
 .modal-container.show-modal {
   display: block;
@@ -145,13 +69,14 @@ button:focus {
   max-width: 100%;
   width: 400px;
   animation-name: modalopen;
-  animation-duration: var(--modal-duration);
+  animation-duration: var(--modal-duration1);
 }
 
 .modal-header {
   background: var(--primary-color);
   color: #fff;
   padding: 15px;
+  text-align: center;
 }
 
 .modal-header h3 {
