--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,6 +4,10 @@
 img{
   background-repeat: no-repeat;
 }
+.search{
+  position: relative;
+  top: 3px;
+}
 .marginRight{
   margin-right: 30px;
 }
@@ -45,13 +49,14 @@ box-shadow: 1px 1px 1px .1px rgb(195, 195, 195);
 .hMiddle{
   display: flex;
   position: relative;
-  
+  top: 10px;
   left: 10px;
 }
 .headerEnd{
-
+position: relative;
  display: flex;
  margin-right: 70px;
+ top: 10px;
  
 }
 .headerEnd1{
@@ -82,7 +87,7 @@ background-color: rgb(245, 244, 244);
 }
 .headerEnd3{
 position: relative;
-top: px;
+top: 5px;
 border: .3px grey solid;
 height: 40px;
 width: 80px;
