added email function need to css

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -123,8 +123,8 @@ button:focus {
   background-color: rgba(0, 0, 0, 0.6);
   display: none;
   position: fixed;
-  top: 0;
-  left: 0;
+  top: -350px;
+  left: -200px;
   right: 0;
   bottom: 0;
 }
@@ -194,6 +194,12 @@ button:focus {
     opacity: 1;
   }
 }
-
+.form2{
+  position: relative;
+  top: -200px;
+display: flex;
+flex-direction: column;
+z-index: 1110;
+}
 
 
